# ezmsg-capture

./: .gitignore  pyproject.toml
examples/: ezdev.py  imageio.py  opencv.py
src/ezmsg/capture/: __init__.py
