[project]
name = "ezmsg-capture"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "ezmsg>=3.5.0",
  "imageio[ffmpeg]>=2.35.1",
  "opencv-python>=4.10.0.84",
  "pillow>=10.4.0",
]
dynamic = ["version"]


[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/ezmsg/capture/__version__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/ezmsg"]

[tool.uv]
dev-dependencies = [
    "ezmsg-rerun>=0.1.0",
]
